--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -1,7 +1,6 @@
 {
   "name": "movies-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
@@ -25,5 +24,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "node-fetch": "^2.7.0"
-  }
+  },
+  "description": ""
 }
